--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -1,9 +1,9 @@
-name: K3s
+name: Kubernetes
 on: [push]
 jobs:
 
   build:
-    name: Build
+    name: Run Kubernetes tests
     runs-on: ubuntu-latest
     steps:
 
@@ -26,5 +26,3 @@ jobs:
     - name: example tests
       run: |
         kubectl cluster-info
-        kubectl create deployment --image nginx my-nginx
-        kubectl get pods
