--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -16,13 +16,20 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Install k8s
+    - name: Install Kubernetes
       run: |
         curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE=777 sh -
         cat /etc/rancher/k3s/k3s.yaml
         mkdir -p ~/.kube
         cp /etc/rancher/k3s/k3s.yaml ~/.kube/config
 
+    - name: Install Helm
+      uses: azure/setup-helm@v1
+      with:
+        version: 'latest' # default is latest stable
+      id: install
+
     - name: Example tests
       run: |
         kubectl cluster-info
+        helm
