Install Helm chart
Signed-off-by: Daniel González Lopes <danielgonzalezlopes@gmail.com>

--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -32,4 +32,6 @@ jobs:
     - name: Example tests
       run: |
         kubectl cluster-info
-        helm
+        helm install operations/helm/tempo-microservices/ --generate-name
+        kubectl create -f microservices-extras.yaml
+        kubectl get pods
