--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -34,4 +34,5 @@ jobs:
         kubectl cluster-info
         helm install operations/helm/tempo-microservices/ --generate-name
         kubectl create -f example/helm/microservices-extras.yaml
+        sleep 5
         kubectl get pods
