--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -34,7 +34,6 @@ jobs:
         kubectl cluster-info
         helm install operations/helm/tempo-microservices/ --generate-name
         kubectl create -f example/helm/microservices-extras.yaml
-        sleep 5
-        kubectl get namespaces
-        kubectl cluster-info dump
+        sleep 20
+        kubectl get pods
         k3s kubectl get pods
