--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -34,6 +34,7 @@ jobs:
         kubectl cluster-info
         helm install operations/helm/tempo-microservices/ --generate-name
         kubectl create -f example/helm/microservices-extras.yaml
+        sleep 10
         kubectl wait --for=condition=Ready pods --all --timeout=600s
         kubectl get deployments
         kubectl get pods
