--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -32,9 +32,10 @@ jobs:
     - name: Example tests
       run: |
         kubectl cluster-info
-        helm install operations/helm/tempo-microservices/ --wait --generate-name
+        helm install operations/helm/tempo-microservices/ --generate-name
         kubectl create -f example/helm/microservices-extras.yaml
-        sleep 10
+        sleep 120
+        kubectl get nodes
         kubectl get deployments
         kubectl get pods
         kubectl get services
