--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -16,12 +16,10 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Install Kubernetes
+    - name: Install K3d and run cluster
       run: |
-        curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE=777 sh -
-        cat /etc/rancher/k3s/k3s.yaml
-        mkdir -p ~/.kube
-        cp /etc/rancher/k3s/k3s.yaml ~/.kube/config
+        wget -q -O - https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
+        k3d cluster create tempo --api-port 6443 --port "16686:80@loadbalancer"
 
     - name: Install Helm
       uses: azure/setup-helm@v1
