--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Helm
       uses: azure/setup-helm@v1
       with:
-        version: 'latest' # default is latest stable
+        version: 'latest'
       id: install
 
     - name: Deploy Tempo
@@ -33,9 +33,11 @@ jobs:
         helm install operations/helm/tempo-single-binary/ --wait --generate-name
         kubectl create -f example/helm/single-binary-extras.yaml
 
+    - name: Wait for synthetic-load-generator
+      run:  kubectl rollout status deployment synthetic-load-generator
+
     - name: Example tests
       run: |
-        kubectl rollout status deployment synthetic-load-generator
         kubectl get nodes
         kubectl get deployments
         kubectl get pods
