Change configs and docs
Signed-off-by: Daniel González Lopes <danielgonzalezlopes@gmail.com>

--- a/operations/helm/tempo-microservices/templates/configmap-tempo-compactor.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo-compactor.yaml
@@ -22,6 +22,7 @@ data:
         trace:
             {{- toYaml .Values.backend | nindent 12 }}
             blocklist_poll: 10m
+            cache: memcached
             memcached:
                 consistent_hash: true
                 host: memcached
