--- a/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
+++ b/operations/helm/tempo-microservices/templates/configmap-tempo-querier.yaml
@@ -22,6 +22,7 @@ data:
         trace:
             {{- toYaml .Values.backend | nindent 12 }}
             blocklist_poll: 5m
+            cache: memcached
             memcached:
                 consistent_hash: true
                 host: memcached
